--- a/HackRPI2019/file.css
+++ b/HackRPI2019/file.css
@@ -42,8 +42,15 @@ p{
     margin-right: auto;
     width: 40%;
 }
-* {
-    box-sizing: border-box;  
+
+	width: 500px;
+	height: 500px;
+ }
+
+.confirm{
+	margin-left:auto;
+	margin-right: auto;
+	margin-bottom:75px;
 }
 
 .setting {
