--- a/HackRPI2019/file.css
+++ b/HackRPI2019/file.css
@@ -52,20 +52,11 @@ p{
 	border: 10px;
 }
 
-.center_upper {
+.center{
     display: block;
-    margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
-    width: 20%;
-}
-
-.center_lower {
-    display: block;
     margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    width: 20%;
+    width: 50%;
 }
 
 .portrait { 
@@ -89,6 +80,7 @@ p{
 
 .cog
 {
+	position: fixed;
     bottom: 0;
     right: 10px;
     max-width: 65px;
@@ -96,7 +88,7 @@ p{
 
 .return
 {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	left: 10px;
 	max-width: 65px
